Fix a crash due to reentrancy in the widget while processing a theme changed notification after coming out of fullscreen mode

The crash occurs as views are removed/added while we are propagating theme changed notifications to the view hierarchy.

Proposed fix is to add a recursion guard flag processing_theme_changed_ which is set in
Widget::OnNativeThemeUpdated before propagating the theme changed notification and reset after
the function returns. We check the flag in Widget::FrameTypeChanged() and bail. This function is called becaue
Widget is registered as an observer on the BrowserView.

BUG=681525

Review-Url: https://codereview.chromium.org/2703933002
Cr-Commit-Position: refs/heads/master@{#451505}

Former-commit-id: f7c7217dd882eac40d5d07e441db5ef9fe3c94a4